--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,22 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# Configuration for GitHub Pages
+lsi: false
+safe: true
+source: [your repo's top level directory]
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
+
+
+
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
