--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: swiyu Documentation
+email: info@swiyu.admin.ch
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "swiyu-admin-ch.github.io/docs" # the subpath of your site, e.g. /blog
 url: "https://swiyu-admin-ch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  andre-kunz
+# twitter_username: jekyllrb
+# github_username:  andre-kunz
 domain: swiyu-admin-ch.github.io
 
 # Build settings
@@ -46,9 +46,6 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
-
-
-
 
 
 # Exclude from processing.
