--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,9 @@
 
 title: swiyu Documentation
 email: info@swiyu.admin.ch
-description: >- # this means to ignore newlines until "baseurl:"
-#  Write an awesome description for your new site here. You can edit this
-#  line in _config.yml. It will appear in your document head meta (for
-#  Google search results) and in your feed.xml site description.
-Documentation of the technical components, architecture and implementations for swiyu, the Swiss e-ID ecosystem
+description: Documentation of the technical architecture, components, and implementations for swiyu - the Swiss e-ID ecosystem
 
-baseurl: "swiyu-admin-ch.github.io" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://swiyu-admin-ch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  andre-kunz
