--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ domain: swiyu-admin-ch.github.io
 
 # Build settings
 # theme: minima
-theme: just-the-docs
+theme: minima
 plugins:
 #  - jekyll-feed
 
