--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+# theme                  : "minimal-mistakes-jekyll"
+remote_theme           : "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -25,8 +25,8 @@ description              : "Documentation of the technical architecture, compone
 url                      : "https://swiyu-admin-ch.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : swiyu-admin-ch/swiyu-admin-ch.github.io"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : "/assets/images/swiyu_logo_name.jpeg"
+logo                     : "/assets/images/swiyu_logo.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true #, false (default)
 words_per_minute         : 200
@@ -328,6 +328,8 @@ defaults:
       comments: # true
       share: false #true
       related: true
+      sidebar:
+        nav: "sidebarmenu"
   # _pages
   - scope:
       path: ""
@@ -335,12 +337,16 @@ defaults:
     values:
       layout: single
       author_profile: false #true
+      sidebar:
+        nav: "sidebarmenu"
   #  _cookbooks
   - scope:
       path: ""
-      type: portfolio
+      type: cookbooks
     values:
       layout: single
       author_profile: false
       share: false  
+      sidebar:
+        nav: "sidebarmenu"
       
