--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ remote_theme           : "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "de-CH"
+locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "swiyu Docs"
 title_separator          : "-"
@@ -33,8 +33,8 @@ masthead_title           : # overrides the website title displayed in the masthe
 breadcrumbs              : true #, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : true #, false (default)
-copyright                : # "copyright" name, defaults to site.title
-copyright_url            : # "copyright" URL, defaults to site.url
+copyright                : "Swiss Confederation" 
+copyright_url            : https://www.eid.admin.ch/en/rechtliches-e
 comments:
   provider               : false #(default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
