Cleanup for reference architecture

--- a/_config.yml
+++ b/_config.yml
@@ -143,24 +143,13 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url:
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url:
+      url: https://github.com/swiyu-admin-ch/
+    - label: "Changelog"
+      url: /changelog/
+    - label: "Roadmap"
+      url: /roadmap/
 
 
 # Reading Files
@@ -331,8 +320,6 @@ defaults:
       comments: # true
       share: false #true
       related: true
-      sidebar:
-        nav: "sidebarmenu"
   # _pages
   - scope:
       path: ""
@@ -340,8 +327,7 @@ defaults:
     values:
       layout: single
       author_profile: false #true
-      sidebar:
-        nav: "sidebarmenu"
+
   #  _cookbooks
   - scope:
       path: ""
