--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ footer:
   links:
     - label: "Feedback and Contributions"
       icon: "fab fa-fw fa-github"
-      url: https://github.com/swiyu-admin-ch/
+      url: https://github.com/swiyu-admin-ch/swiyu-admin-ch.github.io
     - label: "Changelog"
       url: /changelog/
     - label: "Roadmap"
