cleanup for system demo

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "swiyu Docs"
+title                    : "swiyu technical documentation"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Fachbereich e-ID"
@@ -29,7 +29,7 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : swiyu-admin-ch/swiyu-admin-ch.github.io"
 teaser                   : "/assets/images/swiyu_logo_name.jpeg"
 logo                     : "/assets/images/swiyu_logo_88_88.jpg"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : swiyu docs
 breadcrumbs              : true #, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : true #, false (default)
