--- a/_config.yml
+++ b/_config.yml
@@ -167,6 +167,9 @@ kramdown:
   enable_coderay: false
 
 
+# Enable dynamic diagrams with mermaid
+mermaid: true
+
 # Sass/SCSS
 sass:
   sass_dir: _sass
