--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,15 +13,15 @@ sidebarmenu:
   - title: "Cookbooks"
     url: /cookbooks/
     children:
+      - title: "How to use Beta-ID"
+        url: /cookbooks/how-to-use-beta-id/
       - title: "Base- and Trust-Registry"
         url: /cookbooks/onboarding-base-and-trust-registry/
       - title: "Generic Issuer"
         url: /cookbooks/onboarding-generic-issuer/
       - title: "Generic Verifier"
         url: /cookbooks/onboarding-generic-verifier/
-      - title: "How to use Beta-ID"
-        url: /cookbooks/how-to-use-beta-id/
-      - title: "VC visual presentation"
+      - title: "VC Visual Presentation"
         url: /cookbooks/vc-visual-presentation/
 
 
