--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,8 @@ search                   : true #, false (default)
 search_full_content      : true #, false (default)
 search_provider          : # lunr (default), algolia, google
 lunr:
-  search_within_pages    : # true, false (default)
+  search_within_pages    : true
+  search_full_content    : true
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
